--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,21 @@
         android:theme="@style/Theme.Kidney"
         tools:targetApi="31">
         <activity
-            android:name=".DialisisActivity"
+            android:name=".AppbarActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MenuActivity"
+            android:name=".ToolbarActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".DialisisActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
